fix text overflow

--- a/multimodal-ui/src/app/components/map-tiles/map-tiles.component.css
+++ b/multimodal-ui/src/app/components/map-tiles/map-tiles.component.css
@@ -22,8 +22,10 @@
 }
 
 /* Don't make text overflow */
-.mat-mdc-standard-chip {
-    overflow: hidden;
+:host ::ng-deep .mat-mdc-standard-chip .mdc-evolution-chip__cell--primary,
+:host ::ng-deep .mat-mdc-standard-chip .mdc-evolution-chip__action--primary,
+:host ::ng-deep .mat-mdc-standard-chip .mat-mdc-chip-action-label {
+  overflow: hidden;  
 }
 
 .btn-container {
